2018-03-11  Charlie Zender  <zender@uci.edu>

	* Add gridcell to nco_rgr_wgt() guesses for unstructured dimension (fixes PJCS problem regridding ne30 surfdata)

2018-03-09  Charlie Zender  <zender@uci.edu>

	* Change NCO attribute from VERSION to "netCDF Operators version VERSION (http://nco.sf.net)"

2018-03-02  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.4-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.4-alpha01: Flo Rida';git push
	git tag -a 4.7.4-alpha01 -m 'Functionally identical to 4.7.3';git push --tags

	* NCO 4.7.3 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.3: Avid Poi';git push
	git tag -a 4.7.3 -m 'sanitize, --a2o, --nm_typ, --fmt_val, --fl_prn, deprecate ncap';git push --tags

2018-03-01  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.3-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.3-beta01: RFC water';git push
	git tag -a 4.7.3-beta01 -m 'sanitize, --a2o, --nm_typ, --fmt_val, --fl_prn, deprecate ncap';git push --tags

	* Merge sanitize_input branch so nco_sng_sntz() allows only white-listed characters in filenames

	* Deprecate ncap from bld/Makefile

	* Merge ncap deprecation branch for autoconf/CMake

2018-02-27  Charlie Zender  <zender@uci.edu>

	* White-list forward slash on Windows so URLs are acceptable (http://...)

	* Make sure single file operator input is sanitized

2018-02-22  Charlie Zender  <zender@uci.edu>

	* Protect MSVC backslash

	* Do not call sanitizer on system memory

	* White-list percent sign (NCO regression test uses, e.g., %tmp_fl_00)

	* Eliminate waiting on user input for regression tests

	* Implement nco_sng_sntz(), notice 13 new ncks regressions

	* Create sanitize_input branch

2018-02-21  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.3-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.3-alpha05: SW4';git push
	git tag -a 4.7.3-alpha05 -m '--fl_prn, IFS';git push --tags

	* Document --fl_prn
