@@ -1,3 +1,9 @@
+2018-03-13  Charlie Zender  <zender@uci.edu>
+
+	* Support absolute and relative paths to out-of-group (OOG) variables in CF attributes as per CF2 Group specification
+
+	* Add ncremap versions of ncks HINTs in nco_rgr.c
+
 2018-03-11  Charlie Zender  <zender@uci.edu>
 
 	* Add gridcell to nco_rgr_wgt() guesses for unstructured dimension (fixes PJCS problem regridding ne30 surfdata)
